# PerlinDesigner

./: .gitmodules  CMakeLists.txt  README.md
src/: CommonFunctions.h  CommonTypes.h  IImageData.h  INoiseOctave.h  NoiseIterator.cpp  NoiseIterator.h  PerlinOctave.cpp  PerlinOctave.h  Services.cpp  Services.h  Services.h.autosave  main.cpp
src/EventEngine/: Event.h  EventEngine.cpp  EventEngine.h  EventListener.cpp  EventListener.h  EventThread.cpp  EventThread.h
src/GUI/: Button.qml  ErrorSign.qml  IImagePainter.h  ImagePainter.cpp  ImagePainter.h  ImagePainterAdapter.cpp  ImagePainterAdapter.h  ImagePainterManager.cpp  ImagePainterManager.h  ItemBackground.qml  OctaveSettings.qml  OctaveSettingsList.cpp  OctaveSettingsList.h  main.qml  qml.qrc
src/Models/: IOctavesModel.h  OctavesModel.cpp  OctavesModel.h
src/NoiseGen/: AverageValueNoiseData.cpp  AverageValueNoiseData.h  INoiseAlgorithm.h  INoiseCoordinate.h  INoiseOctave.h  MathPD.cpp  MathPD.h  NoiseAlgorithm.cpp  NoiseAlgorithm.h  NoiseCoordinate.cpp  NoiseCoordinate.h  NoiseEngine.cpp  NoiseEngine.h  NoiseIterator.cpp  NoiseIterator.h  Octave2D.cpp  Octave2D.h  PerlinData.cpp  PerlinData.h  PerlinOctave.cpp  PerlinOctave.h
src/OctaveSettings/: IDataFactory.h  IOctaveSetting.h  OctaveSettingsEntry.cpp  OctaveSettingsEntry.h  OctaveSettingsList.cpp  OctaveSettingsList.h  OctavesManager.cpp  OctavesManager.h  PerlinDataFactory.cpp  PerlinDataFactory.h
src/Utils/: AbstractSingleton.h  QMLPointer.cpp  QMLPointer.h
